@@ -12,6 +12,7 @@ New Features:
     1. Performance Testing
 
                 Added "OverWrite PUTS" checkbox. This will overwrite existing uploads rather than adding for capacity.
+                "Mixed traffic" checkbox moved to the performance drop down menu as "Mixed-50/50"
 
 Features:
 
